# AML-SmartBoot

./: .gitignore  CMakeLists.txt  README.md
src/: Logger.hpp  Main.cpp  Main.hpp  SmaliDEX.hpp  SocialClub.cpp  StartMode.cpp  classes.hpp  main.cpp
src/java/: ForceFullScreen.java
